# RoVi-2017

./: README.md  vivado.jou
.Xil/: design_1_wrapper_propImpl.xdc
Robotics/Excercises/3.1/: CMakeLists.txt
Robotics/Excercises/3.1/src/: main.cpp
Robotics/Excercises/4.1/: CMakeLists.txt
Robotics/Excercises/4.1/src/: RobworkTools.hpp  main.cpp
Robotics/Excercises/4.4/: CMakeLists.txt
Robotics/Excercises/4.4/src/: RobworkTools.hpp  main.cpp
Robotics/Excercises/Mandatory2/: CMakeLists.txt  main.cpp
Robotics/Mandatory2/: CMakeLists.txt  epsilon1_3.txt.txt  luaout.txt  pathplanning.cpp  stepout.csv  timeout.csv
Robotics/WorkCells/Kr16WallWorkCell/luaTest/: lua1
Robotics/WorkCells/UR5WorkCellCut/: Scene.wc.xml
Robotics/WorkCells/UR5WorkCellCut/UR-6-85-5-A/: Device.wc.xml
Vision/: invariant
Vision/Excercises/DisplayImage/src/: DisplayImage.cpp
Vision/Excercises/FinalProject/: CMakeLists.txt  main.cpp  readme.txt
Vision/Excercises/FinalProject/FinalProject_Maker1/: CMakeLists.txt  main.cpp
Vision/Excercises/FinalProject/FinalProject_Marker1/: main.cpp
Vision/Excercises/FinalProject/FinalProject_Marker3/: CMakeLists.txt
Vision/Excercises/FinalProject_Maker1/: CMakeLists.txt  Vision.h  main.cpp
Vision/Excercises/FinalProject_Marker1_Intergration/: Vision.cpp
Vision/Excercises/FinalProject_Marker3/: main.cpp
Vision/Excercises/HSVsegmentation/: CMakeLists.txt  main.cpp
Vision/Excercises/MiniProject1/: CMakeLists.txt  main.cpp
Vision/Excercises/SIFT/: CMakeLists.txt  main.cpp
Vision/Excercises/ex3_DFT/: CMakeLists.txt  main.cpp
Vision/Excercises/ex6_contours/: CMakeLists.txt  main.cpp  vision_sample_values
(+24 files in other folders)
